--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="top">
 
-<h2>Online vending  Machine</h2>
+<h2 align="center">Online vending  Machine</h2>
 
 </div>
 <div class="image">
