--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,3 +14,7 @@ div.image {
    background-image:url('../assets/img/bg.jpg');
    
 }
+.heading{
+        padding-top: 33px;
+    text-align: center;
+}
