--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -8,3 +8,9 @@ div.pay {
     width: 1520px;
     background-color: powderblue;
 }
+.plus-minus{
+    padding: 0px 5px;
+}
+.addtocart{
+        margin-top: 10px;
+}
